gitops/tooling-observability-routes/loki-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: loki
  namespace: observability
spec:
  parentRefs:
    - name: gw-int
      namespace: platform-system
  hostnames:
    - "loki.int.${DOMAIN}"
  rules:
    - backendRefs:
        - name: loki-gateway
          port: 80
